# pykale

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .testmondata  .zenodo.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-extras.txt  requirements.txt  setup.cfg  setup.py
.conda/: meta.yaml
.devcontainer/: devcontainer.json
.github/: CHANGELOG.md  CONTRIBUTING.md  FUNDING.yml  changelog-ci-config.json  changelog-ci-config.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: action-fail.md  bug-report.md  documentation.md  feature-request.md  refactor.md
.github/workflows/: build.yml  changelog.yml  check.yml  codeql-analysis.yml  docs.yml  examples.yml  lint.yml  linting.yml  pre-commit.yml  project.yml  release.yml  stale.yml  test-on-label-removed.yml  test-unlabel.yml  test.yml  test_graph.yml  test_project.yml  unittests.yml
docs/: README.md  requirements.txt
docs/source/: conf.py  index.rst  installation.md  introduction.md  kale.embed.rst  kale.evaluate.rst  kale.interpret.rst  kale.loaddata.rst  kale.pipeline.rst  kale.predict.rst  kale.prepdata.rst  kale.rst  kale.utils.rst  modules.rst  notebooks.md  tutorial.md  yaml.md
examples/: CMR_PAH.ipynb  README.md
examples/action_dann/: README.md  config.py  main.py  model.py  test.py
examples/action_dann_lightn/: 1.txt  README.md  check.py  check_classifier.py  config.py  main.py  model.py  requirements.txt  test.py
examples/action_ta3n/: EPIC100-TA3N.yaml  config.py  main.py  model.py
examples/autism_detection/: README.md  config.py  tutorial.ipynb
examples/avmnist_multimodal/: README.md  config.py  main.py  model.py  trainer.py
examples/bandgap_benchmark/: .gitignore  README.md  config.py  main.py  model.py  test_model.py
examples/bindingdb_deepdta/: .gitignore  README.md  config.py  dataset.py  environment.yml  main.py  model.py  tutorial.ipynb
examples/bindingdb_drugban/: README.md  configs.py  interpret.py  main.py  model.py  test.py  visualize.py
examples/bindingdb_drugban_lightning/: README.md  configs.py  main.py
examples/bindingdb_drugban_pytorch/: README.md  README2.md  configs.py  main.py
examples/bindingdb_graph/: create_dataloader.py  main.py  model.py  utils.py
examples/cifar/: config.py  isonet.py  main.py  optim.py  requirements.txt  trainer.py
examples/cifar_cnntransformer/: README.md  config.py  loaddata.py  main.py  model.py  requirements.txt  trainer.py
examples/cifar_isonet/: README.md  config.py  main.py  model.py  requirements.txt  trainer.py
examples/cmri_mpca/: CMR_PAH.ipynb  README.md  config.py  main.py  turorial.ipynb  tutorial.ipynb  tutorial.yaml
examples/data/: README.md
examples/ddi_seal/: config.py  (+6 more)
kale/: README.md  __init__.py
pykale/: README.md
test/: context.py
tests/: README.md  conftest.py  context.py  download_test_data.py  readme.md  requirements_gha_test.txt  test_data.py
(+816 files in other folders)
