[build-system]
requires = [
    "setuptools",
    "wheel",
]

[tool.black]
# https://github.com/psf/black
line-length = 120
target-version = ["py36"]

[tool.isort]
known_first_party = [
    "docs",
    "examples",
    "kale",
    "tests",
]
known_third_party = [
    "matplotlib",
    "numpy",
    "setuptools",
    "sphinx_rtd_theme",
    "torch",
]
profile = "black"
line_length = 120
force_sort_within_sections = "False"
order_by_type = "False"
