[build-system]
requires = [
    "setuptools==59.5.0",
    "wheel",
]

[tool.black]
# https://github.com/psf/black
line-length = 120
target-version = ["py37"]

[tool.isort]
known_first_party = [
    "docs",
    "examples",
    "kale",
    "tests",
]
known_third_party = [
    "matplotlib",
    "numpy",
    "setuptools==59.5.0",
    "sphinx_rtd_theme",
    "torch",
]
profile = "black"
line_length = 120
force_sort_within_sections = "False"
order_by_type = "False"
