[build-system]
requires = [
    "setuptools==59.5.0",
    "wheel",
]

[tool.black]
# https://github.com/psf/black
line-length = 120
target-version = ["py38"]

[tool.isort]
known_first_party = [
    "docs",
    "examples",
    "kale",
    "tests",
]
known_third_party = [
    "matplotlib",
    "numpy",
    "setuptools==59.5.0",
    "sphinx_rtd_theme",
    "torch",
]
profile = "black"
line_length = 120
force_sort_within_sections = "False"
order_by_type = "False"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
