[bdist_wheel]
universal=1

[pep8]
max-line-length = 120

[flake8]
max-line-length = 120
# ignore = E203, F403, F405, E731, W503, W605
exclude =
  build #,examples

[build_sphinx]
all-files = 1
source-dir = docs/source
build-dir = docs/build
warning-is-error = 1

[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE
