[bdist_wheel]
universal=1

# [pep8]
# max-line-length = 120

[flake8]
max-line-length = 120
exclude = build,examples
ignore =
    E203  # whitespace before ':'. Opposite convention enforced by black
    E501  # line too long. Long-line code is reformated by black; remaining long lines in docstrings are OK
    W503  # line break before binary operator. W503 is incompatible with PEP 8, don't use it

[mypy]
# Suppress all missing import errors for all libraries
ignore_missing_imports = True

[build_sphinx]
all-files = 1
source-dir = docs/source
build-dir = docs/build
warning-is-error = 1

[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE
